deployments/apps/celery-backend/celery-beat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-celery-beat-staging
  labels:
    app: saleor-celery-beat-staging
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: saleor-celery-beat-staging
  template:
    metadata:
      labels:
        app: saleor-celery-beat-staging
    spec:
      containers:
        - name: celery-beat
          image: 476114148868.dkr.ecr.eu-west-2.amazonaws.com/saleor-celery-staging:latest
          ports:
            - containerPort: 8000
              name: http-beat         
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "1024Mi"
          command: ['/bin/bash', '-c', 'chmod +x ./scripts/celery.sh; ./scripts/celery.sh;']
