deployments/apps/celery-backend/beat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saleor-beat-staging
  labels:
    app: saleor-celery-beat-staging
spec:
  type: ClusterIP
  ports:
  - name: http-beat
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: saleor-celery-beat-staging
