deployments/apps/celery-backend/flower-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saleor-flower-staging
  labels:
    app: saleor-celery-flower-staging
spec:
  type: ClusterIP
  ports:
  - name: http-flower
    port: 80
    protocol: TCP
    targetPort: 5566
  selector:
    app: saleor-celery-flower-staging
